fix text-faded font contrast

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -847,7 +847,7 @@ a {
 }
 
 .text-faded {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.9);
 }
 
 #about {
